--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,11 @@
 @import "login.scss";
 @import "error.scss";
 @import "footer.scss";
+
+// Import Font Awesome
+$fa-font-path:        "../webfonts";
+
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
